# bitscreamer

./: .gitignore  host.py  pyproject.toml  run.py
bitscreamer/: __init__.py  lfsr.py  pwm.py  rle.py  sim.py  usb.py
tests/: test_bitscreamer.py
