[tool.poetry]
name = "bitscreamer"
version = "0.1.0"
description = ""
authors = ["Josh Koike <jk@tilting.me>"]

[tool.poetry.dependencies]
python = "^3.10"
luna = { git = "https://github.com/greatscottgadgets/luna", branch = "main" }
click = "^8.1.3"
pyusb = "^1.2.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
